  in combination with `reject` and `select`.
- Added `previtem` and `nextitem` to loop contexts, providing access to the
  previous/next item in the loop. If such an item does not exist, the value is
  undefined.
- Added `changed(*values)` to loop contexts, providing an easy way of checking
  whether a value has changed since the last iteration (or rather since the
  last call of the method)

Version 2.9.6
-------------
(bugfix release, released on April 3rd 2017)

- Fixed custom context behavior in fast resolve mode (#675)

Version 2.9.5
-------------
(bugfix release, released on January 28th 2017)

- Restored the original repr of the internal `_GroupTuple` because this
  caused issues with ansible and it was an unintended change.  (#654)
- Added back support for custom contexts that override the old `resolve`
  method since it was hard for people to spot that this could cause a
  regression.
- Correctly use the buffer for the else block of for loops.  This caused
  invalid syntax errors to be caused on 2.x and completely wrong behavior
  on Python 3 (#669)
- Resolve an issue where the `{% extends %}` tag could not be used with
  async environments. (#668)
- Reduce memory footprint slightly by reducing our unicode database dump
  we use for identifier matching on Python 3 (#666)
- Fixed autoescaping not working for macros in async compilation mode. (#671)

Version 2.9.4
-------------
(bugfix release, released on January 10th 2017)

- Solved some warnings for string literals.  (#646)
- Increment the bytecode cache version which was not done due to an
  oversight before.
- Corrected bad code generation and scoping for filtered loops.  (#649)
- Resolved an issue where top-level output silencing after known extend
  blocks could generate invalid code when blocks where contained in if
  statements.  (#651)
- Made the `truncate.leeway` default configurable to improve compatibility
  with older templates.

Version 2.9.3
-------------