@@ -16,6 +16,9 @@ Version 2.10
 - Added `changed(*values)` to loop contexts, providing an easy way of checking
   whether a value has changed since the last iteration (or rather since the
   last call of the method)
+- Added a `namespace` function that creates a special object which allows
+  attribute assignment using the `set` tag.  This can be used to carry data
+  across scopes, e.g. from a loop body to code that comes after the loop.
 
 Version 2.9.6
 -------------
